# ts-climate-analysis-toolbox

./: .gitignore  ACL6H_daily.xlsx  CS6M_daily.xlsx  Combined-IndividualPlots.ipynb  Combined-Monthly-Copy2.ipynb  Combined-Monthly.ipynb  Combined.ipynb  HeadwaterSites_Discharge.ipynb  HeadwaterSites_Temp.ipynb  ID_USGS_sites.xlsx  OR_USGS_sites.xlsx  PNW_USGS_sites.xlsx  README.md  WA_USGS_sites.xlsx  clone  headwater_indiv_sites_from_1928to2018  headwater_indiv_sites_from_1928to2024  headwater_sites.xlsx  headwater_sites_revised.xlsx  headwater_spatial.ipynb  locations_allMerged.xlsx  mann-kendall_results_all_PNW.xlsx  mann-kendall_results_all_PNW_cleaned.xlsx  mf_flows_appendix_a.xlsx  mf_flows_appendix_a_w_loc.xlsx  mk_results_all_snotels.csv  pyproject.toml  stationtriplets_all_SNOTELs.xlsx  testing new classes.ipynb
BC Data/: BCdata_extract_tool.ipynb
aggregate_stats/: aggregate_stats.py
api/: __init__.py  auth.py  common.py  main.py  schemas.py  service.py  service_paired.py  service_snow.py
climate_core/: __init__.py  pairing.py
dataIO/: dataloader.py  webservices.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
old/: AWS Plots.ipynb  stackedlineplots_matplotlib.ipynb  stackedlineplots_matplotlib2.ipynb  streamflow_climateplots.py
plot_collection/: aggregate_plots.py  plot_utilities.py  stackedlineplots.py  streamflow_stat_plots.py  streamflow_stat_plots_matplotlib.py
statisticscalculator/: climatestatistics.py  climatestatistics_old.py  generalstatistics.py
tests/: conftest.py  test_api.py  test_api_snow.py  test_snow.py  (+5 more)
(+31 files in other folders)
