[project]
name = "climate-core"
version = "0.1.0"
description = "Detecting climate-change signals in Pacific Northwest streamflow, snowpack, and related time series."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pymannkendall>=1.4",
    "requests>=2.28",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "PyJWT>=2.9,<3",
]
plots = [
    "plotly>=5.18",
]
dev = [
    "pytest>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["climate_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that hit live external data APIs (USGS/SNOTEL/EnvCanada)",
]
